# fgy

./: .gitignore  README.md  install_dev-dep.sh
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: .env.example  CMakeLists.txt  Dockerfile  Pipfile  main.py
backend/auth/: __init__.py  hash.py  token.py
backend/db/: __init__.py  connection.py  mariadb.py  models.py  redis.py
backend/file/: __init__.py  get.py  upload.py
backend/include/: common.hpp  config.hpp  handler.hpp  mariadb.hpp  middleware.hpp  redis.hpp  router.hpp
backend/include/handlers/: auth.hpp  root.hpp
backend/include/middlewares/: logging.hpp
backend/src/: config.cpp  main.cpp  mariadb.cpp  router.cpp  version.cpp
backend/src/handlers/: auth.cpp
frontend/: Dockerfile  next.config.ts  package-lock.json
frontend/app/: file.tsx  interfaces.ts  page.tsx
